DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/DealHub__DealHubSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DealHub Setting</description>
    <label>DealHub Setting</label>
</CustomObject>