DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__Actions__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Actions__c</fullName>
    <label>Actions</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>