DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__appVersion__c.field-meta.xml
<CustomField>
    <fullName>DealHub__appVersion__c</fullName>
    <description>app Version</description>
    <label>appVersion</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>