DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__DefaultAction__c.field-meta.xml
<CustomField>
    <fullName>DealHub__DefaultAction__c</fullName>
    <defaultValue>&apos;unknown&apos;</defaultValue>
    <description>Default Action path</description>
    <inlineHelpText>Default Action path</inlineHelpText>
    <label>Default Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>