DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__Environment__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Environment__c</fullName>
    <defaultValue>&apos;service&apos;</defaultValue>
    <description>Environment</description>
    <label>Environment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>