DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Namespace_Prefix__c</fullName>
    <description>Namespace Prefix</description>
    <inlineHelpText>Namespace Prefix</inlineHelpText>
    <label>Namespace Prefix</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>