DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__Queries_Where__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Queries_Where__c</fullName>
    <defaultValue>&apos; WHERE IsActive__c =True LIMIT 1000 &apos;</defaultValue>
    <description>Queries Where</description>
    <inlineHelpText>Queries Where</inlineHelpText>
    <label>Queries Where</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>