DigicielFull/force-app/main/default/objects/DealHub__DealHubSetting__c/fields/DealHub__Region__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Region__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Region</description>
    <inlineHelpText>Region</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>